fix the card colour contrast and spacing between footer

--- a/src/sass/components/homepagebanner.scss
+++ b/src/sass/components/homepagebanner.scss
@@ -6,7 +6,11 @@
 }
 
 .homepagebanner__oddrow {
-	background-color: $AU-color-background-shade;
+	background-color: $AU-color-background-alt-shade;
+}
+
+.homepagebanner__lastrow {
+	margin-bottom: -4rem;
 }
 
 .homepagebanner__paragraphcontainer p {
